2004-01-02  MenTaLguY <mental@rydia.net>

	* src/shortcuts.cpp: zoom in shortcut fix for german and other
	  keyboards from schumaml

	* configure.in: added SigC++ 1.2 dependency

	* src/document-private.h, src/document.h, src/document.cpp,
	  src/sp-item.h, src/sp-item.cpp, src/uri-reference.h,
	  src/uri-reference.cpp: rewrote URI monitoring code using SigC++

2004-01-02  Alexander Clausen <alex@skip86.com>
	
	* src/spsvgview.cpp src/inkview.cpp src/Makefile.am: re-enabled svg viewer,
	  renamed to inkview to avoid name clash with spsvgview from sodipodi

2004-01-01  bulia byak <bulia@dr.com>

	* src/desktop.cpp: Pass keyboard events from desktop widget to event contexts (if
	there is no current item on the canvas); now all keys work regardless of mouse
	position, so long as the document window has focus.

	* src/verbs.cpp src/verbs.h: New verbs for switching desktops

	* src/inkscape.cpp src/inkscape.h: New functions for switching desktops

	* src/nodepath.cpp: Fix crash: Tab when no nodepath

	* src/shortcuts.cpp: Ctrl-Tab, Shift-Ctrl-Tab cycle desktops

	* src/node-context.cpp src/event-context.cpp src/select-context.cpp: Do not consume
	Ctrl-Tab/Shift-Ctrl-Tab in contexts. Explicitly run the corresponding verb in
	event-context.cpp because otherwise GTK gobbles it.
 
	* src/splivarot.cpp: Edits in statusbar error messages

2004-01-01  MenTaLguY <mental@rydia.net>

	* src/document-private.h, src/document.h, src/document.cpp,
	  src/sp-item.h, src/sp-item.cpp, src/uri-reference.h,
	  src/uri-reference.cpp:
	  added code to handle notifications when uri/id mappings
	  changed

	* src/desktop.cpp, src/style.cpp: compilation cleanups

	* src/libnr/nr-types.h: documented NR::Coord and NR::ICoord

2003-12-31  MenTaLguY <mental@rydia.net>

	* removed *S variants of NR structs

	* src/libnr/gen_nr_config.c: removed!

	* src/xml/repr.h, src/xml/repr-private.h, src/xml/repr-io.cpp,
	  src/xml/repr.cpp: very preliminary comment support
